# atlas

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Doxyfile  LICENSE  Package.swift  README.md  ROADMAP.md  annotated.html  annotated_dup.js  atlas_2audio_8h.html  atlas_2audio_8h.js  atlas_2audio_8h_source.html  atlas_2effect_8h.html  atlas_2effect_8h.js  atlas_2effect_8h_source.html  atlas_2input_8h.html  atlas_2input_8h.js  atlas_2input_8h_source.html  atmosphere_8h.html  atmosphere_8h.js  atmosphere_8h_source.html  bezel_8h.html  bezel_8h.js  bezel_8h_source.html  body_8h.html  body_8h.js  body_8h_source.html  bounds_8h.html  bounds_8h.js  bounds_8h_source.html  camera_8h.html  camera_8h.js  camera_8h_source.html  class_atmosphere-members.html  class_atmosphere.html  class_atmosphere.js  (+1027 more)
.github/: FUNDING.yml
.github/workflows/: build-cli.yaml  build.yaml  docs.yaml  format-cli.yaml  format.yaml  lint.yaml
Automations/GenerateShaders/: plugin.swift
Shaders/: Basic.metal  Common.metal  Definitions.metal  Depth.metal  DepthPass.metal  Fullscreen.metal  Phong.metal  Shadow.metal
Sources/AtlasEngine/: Units.swift  View.swift
Tests/AtlasEngineTests/: AtlasEngineTests.swift
atlas/: camera.cpp  hello.cpp  light.cpp  texture.cpp  window.cpp
atlas/application/: input.cpp  scene.cpp  window.cpp  workspace.cpp
atlas/core/: coreObject.cpp  renderer.cpp  rendering_utils.cpp
atlas/graphics/: bloom.cpp  deferred.cpp  light.cpp  particle.cpp  render_target.cpp  ssao.cpp  text.cpp  texture.cpp  texture_create.cpp
atlas/lighting/: light.cpp
atlas/network/: pipe.cpp
atlas/object/: compound.cpp  core_object.cpp  cube.cpp  model.cpp  shader.cpp  shape.cpp
atlas/physics/: atlas_joints.cpp  joints.cpp  rigidbody.cpp  vehicle.cpp
atlas/tracer/: log.cpp  tracer_protocol.typ
atlas/utils/: model.cpp  workspace.cpp
atlas/world/: camera.cpp  render_target.cpp  skybox.cpp
aurora/: README.md  biome.cpp  noise.cpp  terrain.cpp
bezel/: README.md  body.cpp  bounds.cpp  collisions.cpp  constraints.cpp  shape.cpp
bezel/jolt/: body.cpp  colliders.cpp  joints.cpp  vehicle.cpp  world.cpp
bezel/native/: bounds.cpp
bezel/shapes/: convex.cpp  convexHull.cpp  epa.cpp  gjk.cpp  projections.cpp  shape.cpp
cli/: Cargo.toml
cli/src/: create.rs  lib.rs  lsp.rs  main.rs  pack.rs  script.rs
docs/: Doxyfile.in  header.html
docs/pages/: main.md  tutorial.md
finewave/: README.md  effect.cpp  engine.cpp  load.cpp  source.cpp  test.cpp
graphite/: README.md  image.cpp  layout.cpp  style.cpp  text.cpp
graphite/input/: button.cpp  checkbox.cpp  text_field.cpp
hana/: Cargo.toml  README.md
hana/examples/: mesh.hana
hana/src/: backend.rs  error.rs  lib.rs  main.rs  opengl.rs  parser.rs  tokens.rs
hydra/: README.md  atmosphere.cpp  clouds.cpp  fluid.cpp  worley.cpp
include/atlas/: audio.h  camera.h  camera.hpp  component.h  effect.h  input.h  input.hpp  light.h  light.hpp  material.hpp  model.hpp  object.h  particle.h  physics.h  scene.h  scene.hpp  test.h  text.h  texture.h  texture.hpp  units.h  units.hpp  window.h  window.hpp  workspace.h  workspace.hpp
include/aurora/: procedural.h  terrain.h
include/bezel/: abstract.h  bezel.h  body.h  bounds.h  constraint.h  shape.h
include/finewave/: audio.h  effect.h  test.h
include/graphite/: image.h  input.h  layout.h  style.h  text.h
include/hydra/: atmosphere.h  fluid.h
include/opal/: opal.h
include/photon/: illuminate.h
include/runtime/: atlasScripts.h
opal/: README.md  buffer.cpp  command_buffer.cpp  device.cpp  framebuffer.cpp  metal_state.cpp  metal_state.h  pipeline.cpp  ray_tracing.cpp  shaders.cpp  texture.cpp
opal/vulkan/: buffer.cpp  framebuffer.cpp  pickDevice.cpp  pipeline.cpp  render.cpp  setup.cpp  swapchain.cpp  texture.cpp  vulkanDevice.cpp
photon/: README.md  gi.cpp  path_tracing.cpp
runtime/: atlas.d.ts
runtime/docs/: components.md  other.md
runtime/executable/: main.cpp
runtime/format/: README.md
runtime/lib/: c_api.cpp  context.cpp  runtime.cpp  scripting.cpp
runtime/scripts/: atlas.js  atlas_audio.js  atlas_graphics.js  atlas_input.js  atlas_log.js  atlas_particles.js  atlas_units.js  aurora.js  bezel.js  finewave.js  graphite.js  hydra.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+165 more)
shaders/: ambient.frag  binn_phong.vert  blinn.frag  blinn_phong.frag  color.frag  color.vert  debug.frag  deferred.frag  deferred.vert  depth.vert  fullscreen.frag  fullscreen.vert  gaussian.frag  light.frag  light.vert  main.frag  main.vert  mainVert.slang  normal.frag  normal.vert  particle.frag  particle.vert  phong.frag  point_depth.frag  point_depth.geom  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  terrain.frag  terrain.vert  text.vert  texture.frag  texture.vert  visualize_depth.frag
shaders/deferred/: deferred.frag  light.frag
shaders/effects/: skybox.frag  ssr.frag  ssr_blur.frag
shaders/fluid/: basic.frag  basic.vert  fluid.frag  fluid.vert  renderFluid.frag  renderFluid.geom  renderFluid.vert
shaders/lib/: math.slang
shaders/metal/: fullscreen.frag.metal  fullscreen.vert.metal  main.frag.metal  main.vert.metal
shaders/opengl/: fullscreen.frag  fullscreen.vert  main.frag
shaders/shadows/: point_depth.frag  point_depth.geom  ssao.frag  ssao_blur.frag
shaders/simple/: texture.vert
shaders/terrain/: fluid.frag  fluid.vert  terrain.frag  terrain_control.tesc  terrain_eval.tese
shaders/volumetric/: volumetric.frag
shaders/vulkan/: fullscreen.frag  fullscreen.vert  main.frag  main.vert
test/: main.cpp  mainFluid.cpp
tests/simple/: main.ascene  package-lock.json  package.json  project.atlas  (+1 more)
(+142 files in other folders)
